wrote OOP lab2. Without tests and log