@@ -1,14 +1,19 @@
 package ru.nsu.yevsyukof.Commands;
 
 import ru.nsu.yevsyukof.Executor.ExecutionContext;
-import java.util.LinkedList;
+
+import java.util.List;
 
 public class Push extends ExecutableCommand {
 
     @Override
-    public void execute(ExecutionContext context, LinkedList<Object> inputArgs) {
+    public void execute(ExecutionContext context, List<String> inputArgs) {
         try {
-            context.getStack().push(Double.valueOf(inputArgs.getFirst().toString()));
+            if (context.getDefines().containsKey(inputArgs.get(0))) {
+                context.getStack().push(context.getDefines().get(inputArgs.get(0)));
+            } else {
+                context.getStack().push(Double.valueOf(inputArgs.get(0)));
+            }
         } catch (NumberFormatException e) {
             System.err.println(e.getMessage());
         }
